# constmuck

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
constmuck_internal/: Cargo.toml
constmuck_internal/src/: lib.rs  panicking.rs  proof_types.rs  trans.rs  wrap_and_peel_ref.rs
src/: __priv_utils.rs  bytes_fns.rs  contiguous.rs  copying.rs  infer.rs  lib.rs  macros.rs  pod.rs  slice_fns.rs  transmutable.rs  type_size.rs  utils.rs  wrapper.rs  zeroable.rs
src/wrapper/: wrapper_fns.rs
tests/: main_tests_modules.rs
tests/main_tests/: contiguous_tests.rs  copying_zeroable.rs  marker_type_construction.rs  pod_tests.rs  test_utils.rs  transmute_and_wrapper.rs  type_size_tests.rs  ui_tests.rs  wrapper_tests.rs  zeroable.rs
tests/main_tests/ui/: bound_cast_fn_err.rs  bound_cast_fn_err.stderr  bound_contiguous_fns_err.rs  bound_contiguous_fns_err.stderr  bound_misc_fn_err.rs  bound_misc_fn_err.stderr  bound_slice_cast_fn_err.rs  bound_slice_cast_fn_err.stderr  bound_wrapper_peel_fns_err.rs  bound_wrapper_peel_fns_err.stderr  bound_wrapper_wrap_fns_err.rs  bound_wrapper_wrap_fns_err.stderr  const_panic_cast_err.rs  const_panic_cast_err.stderr  const_panic_other_err.rs  const_panic_other_err.stderr  const_panic_wrapper_err.rs  const_panic_wrapper_err.stderr  invariant_marker_type_err.rs  invariant_marker_type_err.stderr  peel_ref_fn_lt_err.rs  peel_ref_fn_lt_err.stderr  peel_ref_fn_ty_err.rs  peel_ref_fn_ty_err.stderr  peel_ref_macro_lt_err.rs  peel_ref_macro_lt_err.stderr  peel_ref_macro_ty_err.rs  peel_ref_macro_ty_err.stderr  peel_wrap_ref_fine.rs  wrap_ref_fn_lt_err.rs  wrap_ref_fn_lt_err.stderr  wrap_ref_fn_ty_err.rs  wrap_ref_fn_ty_err.stderr  wrap_ref_macro_lt_err.rs  wrap_ref_macro_lt_err.stderr  wrap_ref_macro_ty_err.rs  wrap_ref_macro_ty_err.stderr
