[package]
name = "constmuck"
version = "1.0.0-gamma0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
license = "Zlib"
description = "const-equivalents of bytemuck functions, and more"
documentation = "https://docs.rs/constmuck/"
readme="./README.md"
keywords = ["no-std", "transmute", "casting", "const-fn"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/constmuck/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "README.md",
    "LICENSE-ZLIB.md", 
]

[features]
derive = ["bytemuck/derive", "syn"]
debug_checks = ["constmuck_internal/debug_checks"]

[dev-dependencies]
static_assertions = "1.1"
trybuild = "1.0"

[dev-dependencies.konst]
version = "0.2.12"
features = ["rust_1_56"]
default_features = false

[dependencies.constmuck_internal]
version = "=1.0.0-gamma0"
path = "./constmuck_internal"

[dependencies.bytemuck]
version = "1.7.2"
features = ["min_const_generics"]

# for making minimum version testing pass
[dependencies.syn]
version = "1.0.76"
optional = true