[package]
name = "constmuck"
version = "0.4.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "Zlib"
description = "const-equivalents of bytemuck functions, and more"
documentation = "https://docs.rs/constmuck/"
readme="./README.md"
keywords = ["no-std", "transmute", "casting", "const-fn"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/constmuck/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "README.md",
    "LICENSE-ZLIB.md", 
]

[features]
derive = ["bytemuck/derive"]
rust_latest_stable = []

#private features
__testdev = []
__testnodev = []

# private feature
ui_tests = []

[dev-dependencies]
static_assertions = "1.1"
trybuild = "1.0"

[dev-dependencies.konst]
version = "0.2.12"
features = ["rust_1_56"]
default-features = false

[dependencies.constmuck_internal]
version = "=0.4.0"
path = "./constmuck_internal"

[dependencies.bytemuck]
version = "1.13"
features = ["min_const_generics"]
default-features = false
