[package]
name = "constmuck"
version = "1.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
rust-version = "1.65.0"
license = "Zlib"
description = "const-equivalents of bytemuck functions"
documentation = "https://docs.rs/constmuck/"
readme="./README.md"
keywords = ["no-std", "transmute", "casting", "const-fn"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/constmuck/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "README.md",
    "LICENSE-ZLIB.md", 
]

[features]
derive = ["bytemuck/derive"]
debug_checks = ["constmuck_internal/debug_checks"]
rust_latest_stable = []

#private features
__ui_tests = []

[dev-dependencies]
static_assertions = "1.1"
trybuild = "1.0"

[dev-dependencies.konst]
version = "0.3.6"
features = ["iter"]
default-features = false

[dependencies.constmuck_internal]
version = "=1.0.0"
path = "./constmuck_internal"

[dependencies.bytemuck]
version = "1.13"
features = ["min_const_generics"]
default-features = false

[dev-dependencies.bytemuck]
version = "1.13"
features = ["min_const_generics", "derive"]
default-features = false

[dependencies.typewit]
version = "1.5"
default-features = false
