[package]
name = "constmuck_internal"
version = "1.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
rust-version = "1.64.0"
license = "Zlib"
description = "internal implementation detail of constmuck, all of this is unstable"
documentation = "https://docs.rs/constmuck/"
keywords = []
categories = []
repository = "https://github.com/rodrimati1992/constmuck/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "LICENSE-ZLIB.md", 
]

[dependencies.const_panic]
version = "0.2"
default_features = false

[dependencies.bytemuck]
version = "1.7.2"
features = ["min_const_generics"]





